--- a/src/Body/Body.module.css
+++ b/src/Body/Body.module.css
@@ -14,6 +14,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  position: relative;
+  z-index: 0;
 }
 
 /* Our Collection Card */
@@ -27,6 +29,7 @@
   text-align: center;
   position: relative;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+  z-index: 2;
 }
 
 .decorIcon {
@@ -41,6 +44,8 @@
   top: 20px;
   width: 30%;
   height: 40%;
+  z-index: 1;
+  pointer-events: none;
 }
 
 .title {
@@ -60,6 +65,8 @@
 /* Toggle Buttons */
 .toggleButtons {
   margin-bottom: 20px;
+  position: relative;
+  z-index: 2;
 }
 
 .toggleButtons button {
@@ -70,7 +77,7 @@
   padding: 8px 16px;
   margin: 0px 10px ;
   cursor: pointer;
-  transition: all 0.1s ease;
+  transition: all 0.0s ease;
 }
 
 .toggleButtons button.active {
@@ -158,10 +165,13 @@
     margin-top: -50px;
   }
   .decorIcon {
+    position: absolute;
     width: 60%;
     right: 10%;
     top: 0px;
-    height: 20%;
+    height: 15%;
+    z-index: 1;
+    pointer-events: none;
   }
   .title{
     font-size: 1.6rem;
@@ -173,11 +183,14 @@
   }
   .toggleButtons{
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
+    position: relative;
+    z-index: 2;
   }
   .toggleButtons button {
     width: 40%;
     font-size: 0.8rem;
+    transition: all 0.0s ease;
   }
   .grid{
     grid-template-columns: 1fr;
